--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: Jasper-s-old-shed-and-how-the-light-shone-in_71029
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Coker, A. M.
     gutenberg_agent_id: '56045'
     url: http://www.gutenberg.org/2009/agents/56045
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/71029#Jasper-s-old-shed-and-how-the-light-shone-in
 gutenberg_issued: '2023-06-23'
 identifiers:
   gutenberg: '71029'
